[metadata]
name = falsy
version = 2017.02.20
summary = falcon.swagger.yaml
author = Jesse MENG (dameng/pingf)
author-email = pingf0@gmail.com
requires-dist =
    falcon
    PyYAML
    Jinja2
    gunicorn
classifier =
    License :: OSI Approved :: Apache Software License
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
description-file = README.md
url = https://github.com/pingf

[files]
packages =
    falsy


[wheel]
universal = 0



[build_sphinx]
all_files = 1
build-dir = docs/_build
source-dir = docs/

